add tests folder

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -14,6 +14,7 @@
         "venv",
         ".python-version",
         ".micropy/",
-        "micropy.json"
+        "micropy.json",
+        "tests"
     ]
 }
