ignore README.md in pymakr.conf

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -15,6 +15,7 @@
         ".python-version",
         ".micropy/",
         "micropy.json",
-        "tests"
+        "tests",
+        "README.md"
     ]
 }
